Changed stuff in the notebook

--- a/Q2.2.ipynb
+++ b/Q2.2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "6ed9699a",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "48fce12e",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "150c1bc3",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "6eac8278",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "5dadc2a9",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "22e5c1d1",
    "metadata": {},
    "outputs": [
@@ -140,30 +140,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "8880df6a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import keras\n",
-    "from tensorflow.keras import layers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "b41ce01b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Normalizes all datapoints to a value between 0 and 1\n",
-    "#train_data = train_data.map(lambda x, y: (x/255, y))\n",
-    "#val_data = val_data.map(lambda x, y: (x/255, y))\n",
-    "#test_data = test_data.map(lambda x, y: (x/255, y))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b735e4ac",
    "metadata": {},
@@ -173,18 +149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e234e4c6",
+   "execution_count": 12,
+   "id": "8880df6a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import keras\n",
+    "from tensorflow.keras import layers\n",
+    "\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Dense, Flatten, Dropout, Rescaling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "798d68eb",
    "metadata": {},
    "outputs": [],
@@ -194,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "a3c20f69",
    "metadata": {},
    "outputs": [],
@@ -305,7 +284,7 @@
     "\n",
     "learning_rate_reduction = ReduceLROnPlateau(monitor='val_loss', patience = 3, verbose=1,factor=0.3, min_lr=0.000001)\n",
     "\n",
-    "callbacks_list = [ early, learning_rate_reduction]"
+    "callbacks_list = [early, learning_rate_reduction]"
    ]
   },
   {
@@ -333,25 +312,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "365fad6a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n",
-      "163/163 [==============================] - 253s 2s/step - loss: 0.8436 - accuracy: 0.5295 - auc: 0.6034 - val_loss: 1.9577 - val_accuracy: 0.5000 - val_auc: 0.5469\n",
-      "Epoch 2/3\n",
-      "163/163 [==============================] - 240s 1s/step - loss: 0.6011 - accuracy: 0.6701 - auc: 0.7755 - val_loss: 0.4570 - val_accuracy: 0.6875 - val_auc: 0.8359\n",
-      "Epoch 3/3\n",
-      "163/163 [==============================] - 240s 1s/step - loss: 0.4486 - accuracy: 0.8154 - auc: 0.8902 - val_loss: 0.4790 - val_accuracy: 0.7500 - val_auc: 0.8438\n"
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (3098675119.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    hist = model.fit(train_data, epochs=20, validation_data = val_data, class_weight = class_weights, early)\u001b[0m\n\u001b[1;37m                                                                                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
      ]
     }
    ],
    "source": [
-    "hist = model.fit(train_data, epochs=20, validation_data = val_data, class_weight = class_weights)"
+    "hist = model.fit(train_data, epochs=20, validation_data = val_data, class_weight = class_weights, callbacks=callbacks_list)"
    ]
   },
   {
